# PetukhPlusPlus

./: AST.h  ASTPrinter.cpp  ASTPrinter.h  CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  Token.h  Trie.cpp  Trie.h  main.cpp  program.petukh  res_lexer.txt  res_syntax.txt
POLIZ/: LabelManager.h
examples/: ackermann.petukh  binxor.petukh  diskrim.petukh  program.petukh  res_lexer.txt  res_poliz.txt  res_semantic.txt  res_syntax.txt  segment_tree.petukh  sqrt.petukh  vsuprun.petukh
src/: main.cpp
src/POLIZ/: PolizGenerator.cpp  PolizGenerator.h  PolizInstruction.h
src/lexer/: Lexer.cpp  Trie.cpp
src/parser/: AST.h  ASTPrinter.cpp  ASTPrinter.h  Parser.cpp  Parser.h
src/rpn/: LabelManager.h  RPNGenerator.cpp  RPNGenerator.h  RPNInstruction.h
src/semantics/: SemanticAnalyzer.cpp  SemanticAnalyzer.h
src/vm/: VM.cpp  VM.h  Value.h
